...
                RepoRowView(repo: vm.repo)
                    .accessibilityIdentifier("repoRow")
                    .navigationTitle(navTitle)
                    .padding(10)
                if (vm.markDownURL != nil) {
                    readMeView
                        .accessibilityIdentifier("readMe")
                }
            }
        }
        .onAppear {
            vm.onViewModelAppear()
        }
...
