...
                    .listRowBackground(Color.theme.background)
                    .onTapGesture {
                        segue(repo: repo)
                    }
            }
        }
        .accessibilityIdentifier("trendingRepoList")
        .tint(Color.theme.accent)
        .listStyle(.plain)
        .modifier(ListBackgroundModifier())
        .modifier(ListUIRefreshControlModifier(tintColor: UIColor(Color.theme.accent)))
    }
    
...
