...
    private var launchFooterButton: some View {
        VStack {
            Button(action: {
                showTrendingList.toggle()
            }, label: {
                RoundedButtonView(title: buttonText.localized())
                    .accessibilityIdentifier("enterButton")
            })
        }
    }
    
    private var launchFooterTextButtons: some View {
        VStack {
...
